Fixed privacy-button's line-height to 1em so it's not too high.

--- a/src/styl/end-screen.styl
+++ b/src/styl/end-screen.styl
@@ -109,6 +109,7 @@ $end-screen-mixin($scale-size = $default-scale-size) {
     .privacy-button {
       $privacy-button-default($scale-size);
       left: 0;
+      line-height: 1 * $endscreen-default-size;
     }
 
     .icon-gdpr {
